ansible/clusters/my-cluster/logging/daemonsets.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: DaemonSet
  metadata:
    annotations:
      deprecated.daemonset.template.generation: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"name":"vector","namespace":"logging"},"spec":{"selector":{"matchLabels":{"app":"vector"}},"template":{"metadata":{"labels":{"app":"vector"}},"spec":{"containers":[{"args":["--config","/etc/vector/vector.yaml"],"env":[{"name":"VECTOR_SELF_NODE_NAME","valueFrom":{"fieldRef":{"fieldPath":"spec.nodeName"}}}],"image":"timberio/vector:0.34.0-debian","name":"vector","securityContext":{"privileged":true},"volumeMounts":[{"m [...]
    name: vector
    namespace: logging
  spec:
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: vector
    template:
      metadata:
        labels:
          app: vector
      spec:
        containers:
        - args:
          - --config
          - /etc/vector/vector.yaml
          image: timberio/vector:0.34.0-debian
          imagePullPolicy: IfNotPresent
          name: vector
          resources: {}
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/vector/
            name: config
            readOnly: true
          - mountPath: /var/log/containers
            name: containers
            readOnly: true
          - mountPath: /var/log/pods
            name: pods
            readOnly: true
          - mountPath: /var/lib/docker/containers
            name: docker
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: vector
        serviceAccountName: vector
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          operator: Exists
        volumes:
        - configMap:
            defaultMode: 420
            name: vector-config
          name: config
        - hostPath:
            path: /var/log/containers
            type: ""
          name: containers
        - hostPath:
            path: /var/log/pods
            type: ""
          name: pods
        - hostPath:
            path: /var/lib/docker/containers
            type: ""
          name: docker
    updateStrategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
    currentNumberScheduled: 1
    desiredNumberScheduled: 1
    numberAvailable: 1
    numberMisscheduled: 0
    numberReady: 1
    updatedNumberScheduled: 1
kind: List
metadata:
