ansible/clusters/my-cluster/logging/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "6"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"elasticsearch","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"elasticsearch"}},"template":{"metadata":{"labels":{"app":"elasticsearch"}},"spec":{"containers":[{"env":[{"name":"discovery.type","value":"single-node"}],"image":"docker.elastic.co/elasticsearch/elasticsearch:8.11.0","name":"elasticsearch","ports":[{"containerPort":9200},{"containerPort":9300}]}]}}}}
    generation: 6
    name: elasticsearch
    namespace: logging
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: elasticsearch
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-26T16:52:14Z"
        labels:
          app: elasticsearch
      spec:
        containers:
        - env:
          - name: discovery.type
            value: single-node
          - name: xpack.security.enabled
            value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
          imagePullPolicy: IfNotPresent
          name: elasticsearch
          ports:
          - containerPort: 9200
            protocol: TCP
          - containerPort: 9300
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T16:25:30Z"
      lastUpdateTime: "2026-02-26T16:25:30Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      type: Available
    - lastTransitionTime: "2026-02-26T16:25:28Z"
      lastUpdateTime: "2026-02-26T16:52:16Z"
      message: ReplicaSet "elasticsearch-85c4958876" has successfully progressed.
      reason: NewReplicaSetAvailable
      type: Progressing
    observedGeneration: 6
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kibana","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kibana"}},"template":{"metadata":{"labels":{"app":"kibana"}},"spec":{"containers":[{"env":[{"name":"ELASTICSEARCH_HOSTS","value":"http://elasticsearch:9200"}],"image":"docker.elastic.co/kibana/kibana:8.11.0","name":"kibana","ports":[{"containerPort":5601}]}]}}}}
    generation: 4
    name: kibana
    namespace: logging
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: kibana
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-26T16:54:41Z"
        labels:
          app: kibana
      spec:
        containers:
        - env:
          - name: ELASTICSEARCH_HOSTS
            value: http://elasticsearch:9200
          image: docker.elastic.co/kibana/kibana:7.17.10
          imagePullPolicy: IfNotPresent
          name: kibana
          ports:
          - containerPort: 5601
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T16:25:30Z"
      lastUpdateTime: "2026-02-26T16:25:30Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      type: Available
    - lastTransitionTime: "2026-02-26T16:25:28Z"
      lastUpdateTime: "2026-02-26T16:54:43Z"
      message: ReplicaSet "kibana-bd95d9fc7" has successfully progressed.
      reason: NewReplicaSetAvailable
      type: Progressing
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
