ansible/clusters/my-cluster/logging/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kibana","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kibana"}},"template":{"metadata":{"labels":{"app":"kibana"}},"spec":{"containers":[{"env":[{"name":"ELASTICSEARCH_HOSTS","value":"http://elasticsearch:9200"}],"image":"docker.elastic.co/kibana/kibana:7.17.10","name":"kibana","ports":[{"containerPort":5601}]}]}}}}
  generation: 2
  name: kibana
  namespace: logging
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kibana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_HOSTS
          value: http://elasticsearch:9200
        image: docker.elastic.co/kibana/kibana:7.17.10
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-26T17:47:29Z"
    lastUpdateTime: "2026-02-26T17:47:29Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  - lastTransitionTime: "2026-02-26T17:47:28Z"
    lastUpdateTime: "2026-02-26T18:49:42Z"
    message: ReplicaSet "kibana-cccf66bc9" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
