ansible/clusters/my-cluster/logging/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"elasticsearch","namespace":"logging"},"spec":{"ports":[{"name":"http","port":9200,"targetPort":9200},{"name":"transport","port":9300,"targetPort":9300}],"selector":{"app":"elasticsearch"}}}
    name: elasticsearch
    namespace: logging
  spec:
    clusterIP: 10.43.87.244
    clusterIPs:
    - 10.43.87.244
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 9200
      protocol: TCP
      targetPort: 9200
    - name: transport
      port: 9300
      protocol: TCP
      targetPort: 9300
    selector:
      app: elasticsearch
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"kibana","namespace":"logging"},"spec":{"ports":[{"port":5601,"targetPort":5601}],"selector":{"app":"kibana"}}}
    name: kibana
    namespace: logging
  spec:
    clusterIP: 10.43.99.122
    clusterIPs:
    - 10.43.99.122
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
    selector:
      app: kibana
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
