ansible/clusters/my-cluster/logging/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"kibana-ingress","namespace":"logging"},"spec":{"ingressClassName":"nginx","rules":[{"host":"kibana.34.89.208.249.nip.io","http":{"paths":[{"backend":{"service":{"name":"kibana","port":{"number":5601}}},"path":"/","pathType":"Prefix"}]}}]}}
    generation: 1
    name: kibana-ingress
    namespace: logging
  spec:
    ingressClassName: nginx
    rules:
    - host: kibana.34.89.208.249.nip.io
      http:
        paths:
        - backend:
            service:
              name: kibana
              port:
                number: 5601
          path: /
          pathType: Prefix
    loadBalancer:
      ingress:
      - ip: 10.156.15.202
kind: List
metadata:
